testing by updating blockquote light

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <img class="staff-image img-responsive img-adaptive" src="images/JOSE_LEWIS_MILLCLOSE_192.jpg">
                       </div>
                       <div class="span9">
-                        <div class="quote">
+                        <div class="blockquote-light">
                           <p>I joined AESSEAL® in 1987 as Data Input Clerk. Two years later I was offered promotion to Accounts Supervisor which gave me
                              responsibility of my own team and the output of the department.</p>
                           <p>My next promotion took me into our Stores department as Stores Manager. The role included an increase in staff responsibility,
@@ -66,7 +66,7 @@
                           <img class="staff-image img-responsive img-adaptive" src="images/MADELINE_KEARNEY_MILLCLOSE_084.jpg">
                         </div>
                         <div class="span9">
-                          <div class="quote">
+                          <div class="blockquote-light">
                             <p>I started my apprenticeship in October 2013. In the first year I worked at the AMRC training center learning machining techniques with a day a week at
                                college doing an engineering BTEC.</p>
                             <p>After this I began working in the Test house as an Apprentice Test Engineer where I was a member of the Gas Seal Team, lapping, etching, building and testing
@@ -81,7 +81,7 @@
                           <img class="staff-image img-responsive img-adaptive" src="images/JOSH_PERRY_MILLCLOSE_225.jpg">
                         </div>
                         <div class="span9">
-                          <div class="quote">
+                          <div class="blockquote-light">
                             <p>I joined AESSEAL® in 2013 straight from university as a Business Assurance Officer (HSEQ).
                                I began with a focus on H&S where AESSEAL® put me through my NEBOSH General Certificate which is an in depth qualification
                                built as a foundation for Health and Safety Managers. I progressed into Quality and Environmental aspects of the department
