Resetting caused a slight error

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <div class="carousel-inner horizontal">
 
             <div class="item active">
-              <div class="col-sm-3 col-md-4 col-sm-6 col-xs-12 news no-padding">
+              <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
                 <div class="news-panel">
                   <div class="news-heading">
                     <img class="img-adaptive center-block" src="images/Our-video-journey-sq.jpg" alt="Chris Video Diary thumbnail">
@@ -258,7 +258,7 @@
             </div>
 
             <div class="item">
-              <div class="col-sm-3 col-md-4 col-sm-6 col-xs-12 news no-padding">
+              <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
                 <div class="news-panel">
                   <div class="news-heading">
                     <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/factory-Phase-5-External-Night-sq.jpg" alt="Forest road">
@@ -275,7 +275,7 @@
             </div>
 
             <div class="item">
-              <div class="col-sm-3 col-md-4 col-sm-6 col-xs-12 news no-padding">
+              <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
                 <div class="news-panel">
                   <div class="news-heading">
                     <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/QA-22_420.jpg" alt="Queens award flag">
@@ -292,7 +292,7 @@
             </div>
 
             <div class="item">
-              <div class="col-sm-3 col-md-4 col-sm-6 col-xs-12 news no-padding">
+              <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
                 <div class="news-panel">
                   <div class="news-heading">
                     <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/Water-management-system-installation-sq.jpg" alt="Water management installation">
@@ -309,7 +309,7 @@
             </div>
 
             <div class="item">
-              <div class="col-sm-3 col-md-4 col-sm-6 col-xs-12 news no-padding">
+              <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
                 <div class="news-panel">
                   <div class="news-heading">
                     <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/WETLANDS_RD_9760-field-sq.jpg" alt="Wetlands Road Plastic" rel="nofollow">
