--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <p>By committing to take the global company beyond Net Zero globally (we have already gone beyond Net Zero in the UK business) and explaining how we are going to do it, we believe we will provide a road map for other companies and organisations who share our concern about ethical, balanced and sustainable development.</p>
       </div>
 
-      <div class="col-sm-10 col-sm-offset-1">
+      <div class="col-sm-10 col-lg-8 col-lg-offset-2 col-sm-offset-1">
         <h2 class="text-center" id="news">Latest News</h2>
         <div class="carousel slide media-carousel" id="latestNews" data-interval="false">
           <div class="carousel-inner horizontal">
