--- a/index.html
+++ b/index.html
@@ -244,6 +244,23 @@
               <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
                 <div class="news-panel">
                   <div class="news-heading">
+                    <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/AES-solar-panels-installed-1.jpg" alt="Mill Close Solar Panels" rel="nofollow">
+                  </div>
+                  <div class="news-body">
+                    <h4>Solar panel investment saves more than £600k annually</h4>
+                    <p>AESSEAL, the founder of Betterworld, say with energy prices now soaring, they are about to benefit to the value of &pound;636,500 a year from inspiration and best practice sharing from Betterworld member, Gripple Ltd.</p>
+                  </div>
+                  <div class="news-footer">
+                    <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://www.aesseal.com/en/article/solar-panel-investment-saves-more-600k-annually" data-original-title="Read the article on aesseal.com" rel="nofollow">Read the Article</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
+                <div class="news-panel">
+                  <div class="news-heading">
                     <img class="img-adaptive center-block" src="images/Our-video-journey-sq.jpg" alt="Chris Video Diary thumbnail">
                   </div>
                   <div class="news-body">
@@ -303,23 +320,6 @@
                   </div>
                   <div class="news-footer">
                     <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://www.aesseal.com/en/article/verified-beyond-net-zero" rel="nofollow" data-original-title="Read the article on aesseal.com">Read the Article</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="item">
-              <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
-                <div class="news-panel">
-                  <div class="news-heading">
-                    <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/WETLANDS_RD_9760-field-sq.jpg" alt="Wetlands Road Plastic" rel="nofollow">
-                  </div>
-                  <div class="news-body">
-                    <h4>Road to Net Zero ‘paved in … plastic’?</h4>
-                    <p>The use of 36 tonnes of ‘M8’ plastic road surfacing material for AESSEAL’s Factory of the Future has saved the equivalent of 40,000 single-use plastic bags from going to landfill and has offset 279kg of CO2.</p>
-                  </div>
-                  <div class="news-footer">
-                    <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://www.aesseal.com/en/article/road-to-net-zero-paved-in-plastic" data-original-title="Read the article on aesseal.com" rel="nofollow">Read the Article</a>
                   </div>
                 </div>
               </div>
