--- a/index.html
+++ b/index.html
@@ -423,11 +423,17 @@
 
                 <p class="text-center"><strong>Video 8</strong> - In his latest video diary MD Chris Rea talks about how we calculate our scope 1, 2 and 3 emissions and scope 3 avoidance.</p>
               </div>
-              <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom recent-vid" id="diary-nine">
+              <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-nine">
                 <script src="https://fast.wistia.com/embed/medias/qv7oc2nb6c.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_qv7oc2nb6c videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/qv7oc2nb6c/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
 
 
                 <p class="text-center"><strong>Video 9</strong> - In his latest video diary MD Chris Rea reports on  progress on the 29by29 pledge, including the more than £7 million of purchase orders made by mid-January.</p>
+              </div>
+              <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-nine">
+                <script src="https://fast.wistia.com/embed/medias/4hr8ekqi5p.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span class="wistia_embed wistia_async_4hr8ekqi5p popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:84px;position:relative;width:150px">&nbsp;</span>
+
+
+                <p class="text-center"><strong>Video 9</strong> - Chris Rea’s latest video diary includes updates from India, the United States, and details progress on the almost £10 million committed to date on environmental measures</p>
               </div>
             </div>
           </div>
