--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
                     <img class="img-adaptive center-block" src="images/Our-video-journey-sq.jpg" alt="Chris Video Diary thumbnail">
                   </div>
                   <div class="news-body">
-                    <h4>Chris Rea Video Diary 9</h4>
-                    <p>In his latest video diary MD Chris Rea reports on  progress on the 29by29 pledge, including the more than £7 million of purchase orders made by mid-January.</p>
+                    <h4>Chris Rea Video Diary 10</h4>
+                    <p>AES Engineering Managing Director Chris Rea’s latest video diary on our 29by29 pledge has updates from India, the United States, and details progress on the almost £10 million committed to date on environmental measures across the group.</p>
                   </div>
                   <div class="news-footer">
                     <a data-toggle="tab" aria-expanded="true" class="btn btn-primary latest-vid" title="Watch the latest video in the boxset" data-target="#box-set" data-original-title="Watch the latest video in the boxset">Watch the Video</a>
