--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 <p class="text-center"><strong>Video 9</strong> - In his latest video diary MD Chris Rea reports on  progress on the 29by29 pledge, including the more than £7 million of purchase orders made by mid-January.</p>
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom recent-vid" id="diary-ten">
-                <script src="https://fast.wistia.com/embed/medias/4hr8ekqi5p.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span class="wistia_embed wistia_async_4hr8ekqi5p popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:84px;position:relative;width:150px">&nbsp;</span>
+                <script src="https://fast.wistia.com/embed/medias/4hr8ekqi5p.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span class="wistia_embed wistia_async_4hr8ekqi5p popover=true popoverAnimateThumbnail=true" style="display:inline-block;;position:relative;">&nbsp;</span>
 
 
                 <p class="text-center"><strong>Video 10</strong> - Chris Rea’s latest video diary includes updates from India, the United States, and details progress on the almost £10 million committed to date on environmental measures</p>
