--- a/index.html
+++ b/index.html
@@ -357,78 +357,65 @@
       </div>
     </div>
 
-    <div class="container-fluid betterworld-green-background ">
-      <div class="row row-deep">
-        <div class="col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2 margin-bottom-2em">
-          <div class="col-xs-12 col-sm-5 col-md-5 image-highlight no-padding vid-tab">
-            <a class="scroll" data-toggle="tab" aria-expanded="true" data-target="#box-set">
-              <img class="img-responsive lazyload" src="images/29x29-Video-Diaries-Box-Set.jpg" alt="Diary box set cover" data-toggle="tooltip" data-placement="top" title="Watch the Box set" />
-            </a>
-          </div>
-          <div class="col-xs-12 col-sm-7 col-md-7">
-            <h3>Chris Rea Video Diary Box Set</h3>
-            <p class="white-text">The AES Engineering Group has committed to invest £29 million on environmental projects between January 1st 2021 and April 1st 2029. The following videos are part of the commitment to report on the progress.</p>
-            <p class="vid-tab"><a data-toggle="tab" aria-expanded="true" data-target="#box-set" class="scroll float-right btn-midgrey btn margin-top">Watch the box set</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <div class="container-fluid margin-top">
-      <div class="row">
-        <div class="row row-eq-height flex-wrap">
-          <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-one">
-            <script src="https://fast.wistia.com/embed/medias/rvo9ngid6n.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_rvo9ngid6n popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+      <div class="container">
+        <h2>Chris Rea Video Diary Box Set</h3>
+        <p class="lead">The AES Engineering Group has committed to invest £29 million on environmental projects between January 1st 2021 and April 1st 2029. The following videos are part of the commitment to report on the progress.</p>
+        <div class="row">
+          <div class="row row-eq-height flex-wrap">
+            <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-one">
+              <script src="https://fast.wistia.com/embed/medias/rvo9ngid6n.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_rvo9ngid6n popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
-            <p class="text-center"><strong>Video 1</strong> - In this first video find out how industry can help tackle climate change, and how AESSEAL are committing to spend £29,000,000 on environmental projects by 2029.</p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-two">
-            <script src="https://fast.wistia.com/embed/medias/3dj8nq6p6h.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_3dj8nq6p6h popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <p class="text-center"><strong>Video 1</strong> - In this first video find out how industry can help tackle climate change, and how AESSEAL are committing to spend £29,000,000 on environmental projects by 2029.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-two">
+              <script src="https://fast.wistia.com/embed/medias/3dj8nq6p6h.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_3dj8nq6p6h popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
-            <p class="text-center"><strong>Video 2</strong> - In the second video, solar panels are going on the roof at AESSEAL Global HQ. This is part of AES Engineering’s £29 million by 2029 planet friendly investment pledge.</p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-three">
-            <script src="https://fast.wistia.com/embed/medias/oxids1891x.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_oxids1891x popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <p class="text-center"><strong>Video 2</strong> - In the second video, solar panels are going on the roof at AESSEAL Global HQ. This is part of AES Engineering’s £29 million by 2029 planet friendly investment pledge.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-three">
+              <script src="https://fast.wistia.com/embed/medias/oxids1891x.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_oxids1891x popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
-            <p class="text-center"><strong>Video 3</strong> - MD Chris Rea explains how AESSEAL is offsetting emissions, and investing in our large global branches as part of our £29 million by 2029 pledge.</p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-four">
-            <script src="https://fast.wistia.com/embed/medias/tmx2072lfz.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_tmx2072lfz popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <p class="text-center"><strong>Video 3</strong> - MD Chris Rea explains how AESSEAL is offsetting emissions, and investing in our large global branches as part of our £29 million by 2029 pledge.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-four">
+              <script src="https://fast.wistia.com/embed/medias/tmx2072lfz.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_tmx2072lfz popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
-            <p class="text-center"><strong>Video</strong> 4 - Video diary four looks at what businesses can do to help by considering their supply and value chains and the all-important Scope 3 emissions.</p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-five">
-            <script src="https://fast.wistia.com/embed/medias/fz0oik1czs.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_fz0oik1czs popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <p class="text-center"><strong>Video</strong> 4 - Video diary four looks at what businesses can do to help by considering their supply and value chains and the all-important Scope 3 emissions.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-five">
+              <script src="https://fast.wistia.com/embed/medias/fz0oik1czs.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_fz0oik1czs popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
-            <p class="text-center"><strong>Video 5</strong> - MD Chris Rea looks at the challenge of persuading suppliers to cut their Scope 1 and Scope 2 emissions.</p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-six">
-            <script src="https://fast.wistia.com/embed/medias/6yj1tf9xml.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_6yj1tf9xml popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <p class="text-center"><strong>Video 5</strong> - MD Chris Rea looks at the challenge of persuading suppliers to cut their Scope 1 and Scope 2 emissions.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-six">
+              <script src="https://fast.wistia.com/embed/medias/6yj1tf9xml.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_6yj1tf9xml popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
-            <p class="text-center"><strong>Video 6</strong> - MD Chris Rea outlines how Scope 1 and Scope 2 emissions in the global group will be controlled and how much it will cost. He also indicates how the remaining investment will be committed to other environmentally friendly action.</p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-seven">
-            <script src="https://fast.wistia.com/embed/medias/bnhmtyyfy9.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_bnhmtyyfy9 popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <p class="text-center"><strong>Video 6</strong> - MD Chris Rea outlines how Scope 1 and Scope 2 emissions in the global group will be controlled and how much it will cost. He also indicates how the remaining investment will be committed to other environmentally friendly action.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-seven">
+              <script src="https://fast.wistia.com/embed/medias/bnhmtyyfy9.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_bnhmtyyfy9 popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
-            <p class="text-center"><strong>Video 7</strong> - In this video MD Chris Rea reveals that almost £3 million has already been committed and undertakes to keep providing updates on the business cases and the environmental outcomes on the Betterworld.Solutions website.</p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-eight">
-            <script src="https://fast.wistia.com/embed/medias/iupevwqrhq.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_iupevwqrhq popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
-
-
-            <p class="text-center"><strong>Video 8</strong> - In his latest video diary MD Chris Rea talks about how we calculate our scope 1, 2 and 3 emissions and scope 3 avoidance.</p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-nine">
-            <script src="https://fast.wistia.com/embed/medias/qv7oc2nb6c.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_qv7oc2nb6c popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <p class="text-center"><strong>Video 7</strong> - In this video MD Chris Rea reveals that almost £3 million has already been committed and undertakes to keep providing updates on the business cases and the environmental outcomes on the Betterworld.Solutions website.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-eight">
+              <script src="https://fast.wistia.com/embed/medias/iupevwqrhq.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_iupevwqrhq popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
 
-            <p class="text-center"><strong>Video 9</strong> - In his latest video diary MD Chris Rea reports on  progress on the 29by29 pledge, including the more than £7 million of purchase orders made by mid-January.</p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom recent-vid" id="diary-ten">
-            <script src="https://fast.wistia.com/embed/medias/4hr8ekqi5p.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_4hr8ekqi5p popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <p class="text-center"><strong>Video 8</strong> - In his latest video diary MD Chris Rea talks about how we calculate our scope 1, 2 and 3 emissions and scope 3 avoidance.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-nine">
+              <script src="https://fast.wistia.com/embed/medias/qv7oc2nb6c.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_qv7oc2nb6c popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
 
-            <p class="text-center"><strong>Video 10</strong> - Chris Rea’s latest video diary includes updates from India, the United States, and details progress on the almost £10 million committed to date on environmental measures</p>
+              <p class="text-center"><strong>Video 9</strong> - In his latest video diary MD Chris Rea reports on  progress on the 29by29 pledge, including the more than £7 million of purchase orders made by mid-January.</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom recent-vid" id="diary-ten">
+              <script src="https://fast.wistia.com/embed/medias/4hr8ekqi5p.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_4hr8ekqi5p popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+
+
+              <p class="text-center"><strong>Video 10</strong> - Chris Rea’s latest video diary includes updates from India, the United States, and details progress on the almost £10 million committed to date on environmental measures</p>
+            </div>
           </div>
         </div>
       </div>
