--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         <div class="col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
           <div class="col-xs-12 col-sm-4 col-sm-push-8 col-md-3 col-md-push-9 image-highlight no-padding">
             <a href="https://aesdigitalbooks.s3.eu-west-1.amazonaws.com/29by29-01/index.html" target="_blank" title="29by29 Update" rel="nofollow">
-              <img class="img-responsive lazyload" src="https://static.aesseal.com/content-image/brochure/29-digi-cover.jpg" alt="29 by 29 Update brochure cover" />
+              <img class="img-responsive lazyload" loading="lazy" src="https://static.aesseal.com/content-image/brochure/29-digi-cover.jpg" alt="29 by 29 Update brochure cover" />
             </a>
           </div>
           <div class="col-xs-12 col-sm-8 col-md-9 col-sm-pull-4 col-md-pull-3">
@@ -430,7 +430,7 @@
             <div class="col-lg-8 col-md-12">
               <h4 class="white-text"><strong>Careful selection of configuration &amp; product types can save your organisation and nature's valuable resources.</strong> </h4>
             </div>
-            <div class="col-lg-4 col-md-12"><img class="img-responsive lazyload" src="https://betterworld.solutions/assets/img/betterworld-solutions-logo-1.png"></div>
+            <div class="col-lg-4 col-md-12"><img class="img-responsive lazyload" loading="lazy" src="https://betterworld.solutions/assets/img/betterworld-solutions-logo-1.png"></div>
           </div>
           <div class="row">
             <div class="col-sm-12">
@@ -473,20 +473,20 @@
                   <div class="col-md-4 col-sm-6 col-xs-8">
                     <a href="http://www.investorsinpeople.co.uk/" rel="nofollow">
                       <picture>
-                        <img alt="Investors in People" data-toggle="tooltip" data-placement="top" title="Investors in People" class="footerlogos lazyaspectratio img-responsive lazyload" src="images/Investors-In-People-White.svg">
+                        <img alt="Investors in People" data-toggle="tooltip" data-placement="top" title="Investors in People" class="footerlogos lazyaspectratio img-responsive lazyload" loading="lazy" src="images/Investors-In-People-White.svg">
                       </picture>
                     </a>
                   </div>
                   <div class="col-sm-3 col-sm-offset-0 col-xs-4">
                     <a href="https://www.aesseal.com/en/about-us/awards" rel="nofollow">
                       <picture>
-                        <img class="footerlogos lazyaspectratio img-responsive lazyload" data-toggle="tooltip" data-placement="top" title="Queen’s Award for Enterprise" alt="Queen’s Award for Enterprise" src="images/QA-Innovation-2021.svg">
+                        <img class="footerlogos lazyaspectratio img-responsive lazyload" loading="lazy" data-toggle="tooltip" data-placement="top" title="Queen’s Award for Enterprise" alt="Queen’s Award for Enterprise" src="images/QA-Innovation-2021.svg">
                       </picture>
                     </a>
                   </div>
                   <div class="col-sm-5  col-xs-12 padding-bottom-2em padding-right">
-                    <a href="https://www.aesseal.com/en/article/aesseal-plc-goes-beyond-net-zero" rel="nofollow">
-                      <picture><img class="img-75 center-block footerlogos img-responsive lazyload" alt="AESSEAL plc goes beyond Net Zero" data-toggle="tooltip" data-placement="top" title="AESSEAL plc goes beyond Net Zero" src="images/net-zero-logo-white.svg">
+                    <a href="https://www.aesseal.com/en/article/aesseal-plc-goes-beyond-net-zero" loading="lazy" rel="nofollow">
+                      <picture><img class="img-75 center-block footerlogos img-responsive lazyload" loading="lazy" alt="AESSEAL plc goes beyond Net Zero" data-toggle="tooltip" data-placement="top" title="AESSEAL plc goes beyond Net Zero" src="images/net-zero-logo-white.svg">
                       </picture>
                     </a></div>
                 </div>
