Adding di id to row to get to the videos

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <h2>Chris Rea Video Diary Box Set</h3>
         <p class="lead">The AES Engineering Group has committed to invest £29 million on environmental projects between January 1st 2021 and April 1st 2029. The following videos are part of the commitment to report on the progress.</p>
         <div class="row">
-          <div class="row row-eq-height flex-wrap">
+          <div class="row row-eq-height flex-wrap" id="boxset">
             <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom" id="diary-one">
               <script src="https://fast.wistia.com/embed/medias/rvo9ngid6n.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_rvo9ngid6n popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
