Removing the relative links

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <div id="myNav" class="overlay-main">
                   <div class="overlay-content">
                     <div class="col-md-4 col-md-offset-1 col-sm-6 col-sm-offset-1">
-                      <ul class="product-cats list-unstyled"><li><a class="no-dash" href="/en/product/bearing-protection">Bearing Protection</a></li>
-                        <li><a class="no-dash" rel="nofollow" href="/en/product/cartridge-mechanical-seals">Cartridge Mechanical Seals</a></li>
+                      <ul class="product-cats list-unstyled"><li><a class="no-dash" href="https://www.aesseal.com/en/product/bearing-protection">Bearing Protection</a></li>
+                        <li><a class="no-dash" rel="nofollow" href="https://www.aesseal.com/en/product/cartridge-mechanical-seals">Cartridge Mechanical Seals</a></li>
                         <li><a class="no-dash" rel="nofollow" href="https://www.aesseal.com/en/product/component-seals">Component Seals</a></li>
                         <li><a class="no-dash" rel="nofollow" href="https://www.aesseal.com/en/product/gas-seals">Gas Seals</a></li>
                         <li><a class="no-dash" rel="nofollow" href="https://www.aesseal.com/en/product/gland-packing">Gland Packing</a></li>
@@ -89,7 +89,7 @@
                       </ul>
                     </div>
                     <div class="col-md-3 hidden-sm hidden-xs">
-                      <ul class="about-us-cats list-unstyled"><li><a class="no-dash" href="/en/careers">Careers</a></li>
+                      <ul class="about-us-cats list-unstyled"><li><a class="no-dash" href="https://www.aesseal.com/en/careers">Careers</a></li>
                         <li><a class="no-dash" rel="nofollow" href="https://www.aesseal.com/en/about-us/certifications-and-standards">Certifications and Standards</a></li>
                         <li><a class="no-dash" rel="nofollow" href="https://www.aesseal.com/contact-us">Contact Us</a></li>
                         <li><a class="no-dash" rel="nofollow" href="https://www.aesseal.com/en/customer-portal">Customer Portal</a></li>
