Changing the URL

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <p>A 40-year plus payback for a new all-electric Heating Ventilation and Air Conditioning system may seem a lot, but the planet benefits now. AES Engineering group Managing Director Chris Rea gives the background to an investment decision.</p>
                   </div>
                   <div class="news-footer">
-                    <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://www.aesseal.com/en/article/solar-panel-investment-saves-more-600k-annually" data-original-title="Read the article on aesseal.com" rel="nofollow">Read the Article</a>
+                    <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://betterworld.solutions/articles/case-for-updated-hvac-systems" data-original-title="Read the article on aesseal.com" rel="nofollow">Read the Article</a>
                   </div>
                 </div>
               </div>
