--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                   </div>
                   <div class="news-body">
                     <h4>Time lapse: Future proofing the environment</h4>
-                    <p>The future is on the way … but we have speeded it up a bit in case you can’t wait to see progress on our Factory of the Future.</p>
+                    <p>The future is on the way … but we have speeded it up a bit in case you can’t wait to see progress on our Factory for the Future.</p>
                   </div>
                   <div class="news-footer">
                     <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="Read the article on aesseal.com" href="https://www.aesseal.com/en/article/future-starts-here#timelapse" rel="nofollow">Watch the Video</a>
