--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js" integrity="sha256-HmfY28yh9v2U4HfIXC+0D6HCdWyZI42qjaiCFEJgpo0=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
   <link ref="shortcut icon" type="image/x-icon" href="favicon.ico?">
+  <link rel="canonical" href="https://29by29.aesseal.com/" />
   <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/solid.css" integrity="sha384-VGP9aw4WtGH/uPAOseYxZ+Vz/vaTb1ehm1bwx92Fm8dTrE+3boLfF1SpAtB1z7HW" crossorigin="anonymous">
