--- a/index.html
+++ b/index.html
@@ -243,6 +243,23 @@
               <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
                 <div class="news-panel">
                   <div class="news-heading">
+                    <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/Tarragona-Solar-roof-finished-sq.jpg" alt="HVAC Stsyem and workers" rel="nofollow">
+                  </div>
+                  <div class="news-body">
+                    <h4>Here comes the sun – in Tarragona</h4>
+                    <p>As part the AES Engineering Group pledge to invest £29 million by 2029, a project to fit solar panels has been completed at our premises in Tarragona, Spain.</p>
+                  </div>
+                  <div class="news-footer">
+                    <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://www.aesseal.com/en/article/here-comes-sun-tarragona" data-original-title="Read the article on aesseal.com" rel="nofollow">Read the Article</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
+                <div class="news-panel">
+                  <div class="news-heading">
                     <img class="img-adaptive center-block" src="images/Air-Conditioning-for-AESSEAL-inc-Rockford-sq.jpg" alt="HVAC Stsyem and workers" rel="nofollow">
                   </div>
                   <div class="news-body">
