Adding the new times article to the 29by29page

--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
               <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
                 <div class="news-panel">
                   <div class="news-heading">
-                    <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/Wetlands-Flowers-sq.jpg" alt="HVAC Stsyem and workers" rel="nofollow">
+                    <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/CJR_phase_5_6305_sq.jpg" alt="HVAC Stsyem and workers" rel="nofollow">
                   </div>
                   <div class="news-body">
-                    <h4>An Around the World Update: AES Engineering Group Environmental Projects</h4>
-                    <p>The past year has seen significant developments in the number of AESSEAL environmental projects, with £11 million and counting spent as part of the AES Engineering Group ‘29 by 29’ investment pledge.</p>
+                    <h4>AESSEAL ‘Factory for the future’ in The Times</h4>
+                    <p>AESSEAL’s ‘Factory for the future” has featured in the print edition of The Times, under the title ‘Rotherham opens door to future of manufacturing’. Group Managing Director Chris Rea says: “I have no doubt that for Rotherham, and the business, the best is yet to come”.</p>
                   </div>
                   <div class="news-footer">
-                    <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://www.aesseal.com/en/article/around-world-environmental-update" data-original-title="Read the article on aesseal.com" rel="nofollow">Read the Article</a>
+                    <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://static.aesseal.com/corp/11973_Tim_Aesseal_11902023-B.pdf" data-original-title="Read the article on aesseal.com" rel="nofollow">Read the Article</a>
                   </div>
                 </div>
               </div>
@@ -260,14 +260,14 @@
               <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
                 <div class="news-panel">
                   <div class="news-heading">
-                    <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/Tarragona-Solar-roof-finished-sq.jpg" alt="HVAC Stsyem and workers" rel="nofollow">
+                    <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/Wetlands-Flowers-sq.jpg" alt="HVAC Stsyem and workers" rel="nofollow">
                   </div>
                   <div class="news-body">
-                    <h4>Here comes the sun – in Tarragona</h4>
-                    <p>As part the AES Engineering Group pledge to invest £29 million by 2029, a project to fit solar panels has been completed at our premises in Tarragona, Spain.</p>
+                    <h4>An Around the World Update: AES Engineering Group Environmental Projects</h4>
+                    <p>The past year has seen significant developments in the number of AESSEAL environmental projects, with £11 million and counting spent as part of the AES Engineering Group ‘29 by 29’ investment pledge.</p>
                   </div>
                   <div class="news-footer">
-                    <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://www.aesseal.com/en/article/here-comes-sun-tarragona" data-original-title="Read the article on aesseal.com" rel="nofollow">Read the Article</a>
+                    <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://www.aesseal.com/en/article/around-world-environmental-update" data-original-title="Read the article on aesseal.com" rel="nofollow">Read the Article</a>
                   </div>
                 </div>
               </div>
