--- a/index.html
+++ b/index.html
@@ -243,6 +243,23 @@
               <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
                 <div class="news-panel">
                   <div class="news-heading">
+                    <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/Methane-Flare-2.jpg" alt="Methane flaring on rig" rel="nofollow">
+                  </div>
+                  <div class="news-body">
+                    <h4>Stopping methane flaring and venting</h4>
+                    <p>AESSEAL, has invented new technology that seeks to eliminate or reduce both intermittent and continuous emissions and could be retrofitted to oil and gas facilities across the world.</p>
+                  </div>
+                  <div class="news-footer">
+                    <a data-toggle="tooltip" class="btn btn-primary" data-placement="bottom" title="" href="https://betterworld.solutions/examples/stop-methane-flaring-yes-we-can" data-original-title="Read the article on betterworld.solutions" rel="nofollow">Read the Article</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="col-md-4 col-sm-6 col-xs-12 news no-padding">
+                <div class="news-panel">
+                  <div class="news-heading">
                     <img class="img-adaptive center-block" src="https://static.aesseal.com/content-thumb/news/CJR_phase_5_6305_sq.jpg" alt="HVAC Stsyem and workers" rel="nofollow">
                   </div>
                   <div class="news-body">
